2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am:
	* configure.ac:
	Add shadow man pages for xtrap* programs
	Use sed to fill in variables in man page